// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact-summary > route getLicenseeDetailsSummaryRows should have the newsletter row if isLicenceForYou is true 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Licence details",
    },
    "value": Object {
      "text": "Make a note on confirmation",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-newsletter",
          },
          "href": "/buy/newsletter",
          "text": "Change",
          "visuallyHiddenText": "newsletter",
        },
      ],
    },
    "key": Object {
      "text": "Newsletter",
    },
    "value": Object {
      "text": "Yes",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows should not have the newsletter row if isLicenceForYou is false 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Licence details",
    },
    "value": Object {
      "text": "Make a note on confirmation",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should display the Contact as Make a note on confirmation 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Licence details",
    },
    "value": Object {
      "text": "Make a note on confirmation",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should display the Contact as the email and Newsletter as no 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Licence details",
    },
    "value": Object {
      "text": "Email to new3@example.com",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 1 day (non physical licence) should display the Contact as the phone number and Newsletter as yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Licence details",
    },
    "value": Object {
      "text": "Text messages to 07700900900",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) with postal fulfilment should display the Licence as post, Licence Confirmation and Contact as the email and Newsletter as no 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": "/buy/fulfilment",
          "text": "Change",
          "visuallyHiddenText": "licence fulfilment option",
        },
      ],
    },
    "key": Object {
      "text": "Licence",
    },
    "value": Object {
      "text": "By post",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": "/buy/confirmation-method",
          "text": "Change",
          "visuallyHiddenText": "licence confirmation option",
        },
      ],
    },
    "key": Object {
      "text": "Licence Confirmation",
    },
    "value": Object {
      "text": "Email to new3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Contact",
    },
    "value": Object {
      "text": "Email to new3@example.com",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) with postal fulfilment should display the Licence as post, Licence Confirmation and Contact as the phone number and Newsletter as yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": "/buy/fulfilment",
          "text": "Change",
          "visuallyHiddenText": "licence fulfilment option",
        },
      ],
    },
    "key": Object {
      "text": "Licence",
    },
    "value": Object {
      "text": "By post",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": "/buy/confirmation-method",
          "text": "Change",
          "visuallyHiddenText": "licence confirmation option",
        },
      ],
    },
    "key": Object {
      "text": "Licence Confirmation",
    },
    "value": Object {
      "text": "Text message to 07700900900",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Contact",
    },
    "value": Object {
      "text": "Text messages to 07700900900",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) with postal fulfilment should display the Licence as post, Licence Confirmation as note of licence and Contact as post 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-fulfilment-option",
          },
          "href": "/buy/fulfilment",
          "text": "Change",
          "visuallyHiddenText": "licence fulfilment option",
        },
      ],
    },
    "key": Object {
      "text": "Licence",
    },
    "value": Object {
      "text": "By post",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": "/buy/confirmation-method",
          "text": "Change",
          "visuallyHiddenText": "licence confirmation option",
        },
      ],
    },
    "key": Object {
      "text": "Licence Confirmation",
    },
    "value": Object {
      "text": "Note of licence",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Contact",
    },
    "value": Object {
      "text": "By post",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) without postal fulfilment should display the Licence and Contact as the email and Newsletter as no 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": "/buy/fulfilment",
          "text": "Change",
          "visuallyHiddenText": "licence confirmation option",
        },
      ],
    },
    "key": Object {
      "text": "Licence",
    },
    "value": Object {
      "text": "Email to new3@example.com",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Contact",
    },
    "value": Object {
      "text": "Email to new3@example.com",
    },
  },
]
`;

exports[`contact-summary > route getLicenseeDetailsSummaryRows when purchasing a 12 month (physical licence) without postal fulfilment should display the Licence and Contact as the phone number and Newsletter as yes 1`] = `
Array [
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-address",
          },
          "href": "/buy/find-address",
          "text": "Change",
          "visuallyHiddenText": "address",
        },
      ],
    },
    "key": Object {
      "text": "Address",
    },
    "value": Object {
      "text": "14 Howecroft Court, Eastmead Lane, Bristol, BS9 1HJ, GB",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-licence-confirmation-option",
          },
          "href": "/buy/fulfilment",
          "text": "Change",
          "visuallyHiddenText": "licence confirmation option",
        },
      ],
    },
    "key": Object {
      "text": "Licence",
    },
    "value": Object {
      "text": "Text message to 07700900900",
    },
  },
  Object {
    "actions": Object {
      "items": Array [
        Object {
          "attributes": Object {
            "id": "change-contact",
          },
          "href": "/buy/contact",
          "text": "Change",
          "visuallyHiddenText": "contact",
        },
      ],
    },
    "key": Object {
      "text": "Contact",
    },
    "value": Object {
      "text": "Text messages to 07700900900",
    },
  },
]
`;
